# cpp-build

./: CMakeLists.txt  Dockerfile  README.md  main.cpp
src_cpp/pointcloud_project/: CMakeLists.txt
src_cpp/pointcloud_project/pointcloud_lib/: CMakeLists.txt
src_cpp/pointcloud_project/pointcloud_lib/include/pointcloud_lib/: pointcloud_processor.h
src_cpp/pointcloud_project/pointcloud_lib/src/: pointcloud_processor.cpp
src_cpp/pointcloud_project/second_app/: main.cpp
